# AITH-python-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  tox.ini
.github/workflows/: test.yml
HW_1/: app.py  errors.py  math_funcs.py
HW_2/: main.py
HW_2/cart/entities/: cart.py  item_cart.py
HW_2/cart/repos/: cart_repo.py
HW_2/cart/repos/dto/: post_cart_dto.py
HW_2/cart/repos/interface/: interface_cart_repo.py
HW_2/cart/services/: cart_service.py
HW_2/cart/services/interface/: interface_cart_service.py
HW_2/common/exceptions/: base_error.py  cart_error.py
HW_2/core/entities/: cart.py  item.py  item_cart.py
HW_2/core/exceptions/: base_error.py  item_error.py
HW_2/core/repos/cart_repo/: interface_cart_repo.py
HW_2/core/repos/item_repo/: interface_item_repo.py
HW_2/core/services/cart_service/: cart_service.py
HW_2/core/services/interface/: interface_cart_service.py  interface_item_service.py
HW_2/core/services/item_service/: item_service.py
HW_2/infrastructure/api/: cart.py  dependencies.py  item.py  routers.py
HW_2/infrastructure/data/mappers/: item_mapper.py
HW_2/item/mappers/: item_mapper.py
HW_2/item/repos/: item_repo.py
HW_2/item/repos/dto/: patch_item_dto.py  post_item_dto.py  put_item_dto.py
HW_2/item/repos/interface/: interface_item_repo.py
HW_2/item/services/: item_service.py
HW_2/item_cart/entities/: item_cart.py
HW_4/demo_service/api/: contracts.py  main.py  users.py  utils.py
tests/: test_homework_2.py
tests/HW_4/: test_homework_4.py
tests/load_tests/: locustfile.py
(+7 files in other folders)
