[tool.poetry]
name = "HW_4"
version = "0.1.0"
description = ""
authors = ["Ilya Katun <katun.ilya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.30.6"
fastapi = "^0.114.2"
requests = "^2.32.3"
httpx = "^0.27.2"
flake8 = "^7.1.1"
mypy = "^1.11.2"
prometheus-fastapi-instrumentator = "^7.0.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.24.0"
anyio = "^4.6.0"
pytest-tornasync = "^0.6.0.post2"
pytest-trio = "^0.8.0"
locust = "^2.31.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "HW_4"
ignore_missing_imports = true

